WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108576
REGRESSION (
r141192
): Crash beneath cti_op_get_by_id_generic @ discussions.apple.com
https://bugs.webkit.org/show_bug.cgi?id=108576
Summary
REGRESSION (r141192): Crash beneath cti_op_get_by_id_generic @ discussions.ap...
Geoffrey Garen
Reported
2013-01-31 21:27:53 PST
REGRESSION (
r141192
): Crash beneath cti_op_get_by_id_generic @ discussions.apple.com
Attachments
Patch
(1.75 KB, patch)
2013-01-31 21:32 PST
,
Geoffrey Garen
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2013-01-31 21:28:24 PST
<
rdar://problem/13116134
>
Geoffrey Garen
Comment 2
2013-01-31 21:32:54 PST
Created
attachment 185937
[details]
Patch
Geoffrey Garen
Comment 3
2013-01-31 21:33:50 PST
I spent a few hours trying to reproduce this bug in a regression test, but I was unsuccessful in reliably reproducing the problematically aligned addresses.
WebKit Review Bot
Comment 4
2013-01-31 21:35:31 PST
Attachment 185937
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp']" exit_code: 1 Source/JavaScriptCore/ChangeLog:11: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/JavaScriptCore/ChangeLog:13: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 5
2013-01-31 21:55:27 PST
Committed
r141536
: <
http://trac.webkit.org/changeset/141536
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug